--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -21,3 +21,26 @@
 
 en:
   hello: "Hello world"
+  sample_app: "sample app"
+  static_pages:
+  the: "The"
+  Ruby on Rails Tutorial: "Ruby on Rails Tutorial"
+  Ruby on Rails Tutorial Sample App: "Ruby on Rails Tutorial Sample App aaaa"
+  by: "by"
+  Michael Hartl: "Michael Hartl"
+  About: "About"
+  Contact: "Contact"
+  News: "News"
+  Home: "Home"
+  Help : "Help"
+  Log in: "Log in"
+  Welcome to the Sample App: "Welcome to the Sample App"
+  This is the home page for the: "This is the home page for the"
+  Ruby on Rails Tutorial: "Ruby on Rails Tutorial"
+  sample application: "sample application"
+  Sign up now: "Sign up now!"
+  Rails logo: "Rails logoafaf"
+  Sign up title: "Sign up"
+  Sign up: "Sign updd"
+  This will be a signup page for new users: "This will be a signup page for new users."
+
