--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -43,4 +43,13 @@ en:
   Sign up title: "Sign up"
   Sign up: "Sign updd"
   This will be a signup page for new users: "This will be a signup page for new users."
+  Get help on the Ruby on Rails Tutorial at the: "Get help on the Ruby on Rails Tutorial at the aa"
+  Rails Tutorial help section: "Rails Tutorial help section adda"
+  To get help on this sample app: "To get help on this sample app, see the"
+  Contact the Ruby on Rails: "Contact the Ruby on Rails Tutorial about the sample app at the"
+  contact page: "contact page"
+  book: "book"
+  screencast series: "screencast series"
+  to teach web development with: "to teach web development with"
+  This is the sample application: "This is the sample application for the tutorial."
 
