--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -52,4 +52,4 @@ en:
   screencast series: "screencast series"
   to teach web development with: "to teach web development with"
   This is the sample application: "This is the sample application for the tutorial."
-
+  and: "and"
