--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -31,6 +31,19 @@ en:
       title: "Sign up"
       Confirmation: "Confirmationaaa"
       Create_my_account: "Create my accountaaa"
+    edit:
+      Save: "Save changes"
+      Edit_user: "Edit user"
+      change: "change"
+      Update: "Update your profile"
+      Please: "Please log in."
+    index:
+       All: "All users"
+    user:
+      delete: "delete"
+      You: "You sureaa?"
+    destroy:
+      User: "User deleted"
   layouts:
     footer:
       Tutorial: "Ruby on Rails Tutorial"
@@ -94,9 +107,11 @@ en:
       Sign up: "Sign up now!"
       Log_in: "Log in"
       New_user: "New user"
+      remember: "Remember me on this computer"
     create:
       danger: "Invalid email/password combination"
-      remember: "Remember me on this computer"
+      Profile: "Profile updated"
+      All users: "All users"
 
 
 
