--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -123,4 +123,4 @@ en:
       Email_not_found: "Email address not found"
     edit:
       Update_password: "Update password"
-      Reset_password: "Reset password"
+      Reset_password: "Reset passwordcadaf"
